# MoodJourney

./: .gitignore  README.md  download_model.py  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
models/emotion/: config.json
scripts/: download_model_dictation.py  download_model_emotion.py  download_model_suggestion.py  inspect_model.py  modify_keys.py
src/: App.jsx  PasswordPopup.css  PasswordPopup.jsx  index.html  main.jsx  theme.js  utils.js
src-tauri/: .gitignore  Cargo.toml  entries.db  entrnies.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_template.rs  db.rs  dictation.rs  emotion.rs  lib.rs  main.rs  password.rs  suggestion.rs
src/components/: AppDrawer.jsx  AssistantPage.jsx  ConfirmationDialog.jsx  ImageUploadModal.jsx  InsightsPage.jsx  JournalEntryView.jsx  NewEntryForm.jsx  PinModal.jsx  SettingsPage.jsx
