[package]
name = "moodjourney"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "moodjourney"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moodjourney_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] } 
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.2.1"
chrono = "0.4"
rust-bert = "0.23.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
whisper-rs = "0.14.2"
hound = "3.5.1"
uuid = "1.16.0"
tauri-plugin-fs = "2.2.1"
base64 = "0.22.1"
sha2 = "0.10"
once_cell = "1.18"
dirs = "5.0"

